--- a/rida.css
+++ b/rida.css
@@ -70,12 +70,13 @@ body .heading {
 
 body .heading .sub {
   color: #fae901;
+  font-size: 0.7em;
 }
 
 body .heading h1 {
   text-transform: capitalize;
   font-size: 40px;
-  margin-right: 5%;
+  margin-right: 2%;
   color: #08fc08;
   padding: 0 1px 0 0;
 }
@@ -88,7 +89,7 @@ body .heading h1 {
 
 .subscript {
   color: blue;
-  font-size: medium;
+  font-size: 0.3em;
   text-shadow: none;
   font-family: 'pacifico';
 }
@@ -272,6 +273,7 @@ section h2 {
 .descrip {
   text-align: justify;
   font-size: 3vh;
+  padding-bottom: 1em;
 }
 
 #straw {
@@ -345,7 +347,7 @@ section h2 {
   -ms-flex-wrap: nowrap;
       flex-wrap: nowrap;
   padding-bottom: 1rem;
-  padding-top: 2rem;
+  padding-top: 1rem;
   padding-left: 1rem;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
@@ -357,7 +359,7 @@ section h2 {
   border: 2px solid black;
   border-radius: 15px;
   text-align: center;
-  margin: 0 4% 0  0;
+  margin: 0 2% 0  0;
 }
 
 .berry_types div h3 {
@@ -368,15 +370,15 @@ section h2 {
   text-align: center;
   margin-top: 3%;
   letter-spacing: 2px;
-  font-size: 25px;
+  font-size: 20px;
   font-weight: 100;
 }
 
 .berry_types div img {
   margin-top: -3%;
   padding-top: 0%;
-  height: 150px;
-  width: 150px;
+  height: 110px;
+  width: 110px;
   border: 4px solid #2c2a2a;
   border-radius: 50%;
 }
@@ -388,8 +390,8 @@ section h2 {
             justify-content: left;
   }
   .berry_types div img {
-    height: 250px;
-    width: 250px;
+    height: 200px;
+    width: 200px;
   }
 }
 
@@ -406,7 +408,25 @@ section h2 {
   }
 }
 
-.mulinfo, .raspinfo {
+.placeinfo{
+  background: #5555d4;
+  border-radius: 20px;
+  line-height: 2rem;
+  letter-spacing: 0.5px;
+  text-align: center;
+
+}
+
+@media (min-width: 840px){
+ .placeinfo{
+   width: 40%;
+   margin-left: 4%;
+ }   
+}
+
+
+
+.mulinfo, .raspinfo, .gogoinfo {
   background: #5555d4;
   visibility: hidden;
   border-radius: 20px;
@@ -421,13 +441,22 @@ section h2 {
   cursor: pointer;
 }
 
-.mulinfo.show, .raspinfo.show {
+.mulinfo.show, .raspinfo.show ,.gogoinfo.show {
   visibility: visible;
 }
 
 .raspinfo {
   margin-top: -135%;
 }
+.gogoinfo {
+  float: right;
+  margin-top: -100%;
+}
+@media (min-width: 840px){
+  .gogoinfo{
+    margin-top: -55%;
+  }   
+ }
 
 #veggie {
   padding: 1rem;
