--- a/rida.css
+++ b/rida.css
@@ -14,8 +14,8 @@ body {
 body #bg1 {
   -webkit-clip-path: polygon(0 0, 100% 0, 100% 30%, 0 70%);
           clip-path: polygon(0 0, 100% 0, 100% 30%, 0 70%);
-  background-image: -webkit-gradient(linear, left top, right bottom, from(#FA0680), color-stop(#f7aaaa), to(#FA0680));
-  background-image: linear-gradient(to bottom right, #FA0680, #f7aaaa, #FA0680);
+  background-image: -webkit-gradient(linear, left top, right bottom, from(#2a0845), color-stop(#6441A5), to(#2a0845));
+  background-image: linear-gradient(to bottom right, #2a0845, #6441A5, #2a0845);
   width: 100%;
   height: 100%;
   position: fixed;
@@ -41,8 +41,8 @@ body #bg2 {
   bottom: 0;
   left: 0;
   z-index: -1;
-  background-image: -webkit-gradient(linear, left top, right bottom, from(#FA0680), color-stop(#f7aaaa), to(#FA0680));
-  background-image: linear-gradient(to bottom right, #FA0680, #f7aaaa, #FA0680);
+  background-image: -webkit-gradient(linear, left top, right bottom, from(#2a0845), color-stop(#6441A5), to(#2a0845));
+  background-image: linear-gradient(to bottom right, #2a0845, #6441A5, #2a0845);
   background-attachment: scroll;
 }
 
@@ -156,7 +156,7 @@ body .heading h1 {
 }
 
 .farm_products div {
-  background-color: #7c7c7b;
+  background-color: #39329b;
   border: 2px solid black;
   border-radius: 15px;
   text-align: center;
@@ -192,7 +192,7 @@ body .heading h1 {
 }
 
 .farm_products div:hover {
-  background-color: #555554;
+  background-color: #3a2863;
   overflow: hidden;
   -webkit-box-shadow: 5px 5px 3px black;
           box-shadow: 5px 5px 3px black;
@@ -241,7 +241,7 @@ hr {
 }
 
 .location .addr, .contact .addr {
-  background-color: #f7aaaa;
+  background-color: #009efd;
   padding: 10px;
   font-family: 'Times New Roman', Times, serif;
   font-style: oblique;
@@ -255,7 +255,7 @@ hr {
 }
 
 section {
-  background-image: linear-gradient(to bottom right, #FA0680, #f7aaaa, #FA0680);
+  background-image: linear-gradient(to bottom right, #2a0845, #6441A5, #2a0845);
   color: black;
   font-weight: 600;
   font-family: 'Alegreya', serif;
@@ -358,7 +358,7 @@ section h2 {
 }
 
 .berry_types div {
-  background-color: #FA0680;
+  background-color: rgb(214, 104, 64);
   border: 2px solid black;
   border-radius: 15px;
   text-align: center;
@@ -430,7 +430,7 @@ section h2 {
 
 
 .mulinfo, .raspinfo, .gogoinfo {
-  background: #5555d4;
+  background: #8888e4;
   visibility: hidden;
   border-radius: 20px;
   display: inline-block;
@@ -440,7 +440,7 @@ section h2 {
 }
 
 .berry_types div:hover {
-  background-color: #555554;
+  background-color: #34155c;
   cursor: pointer;
 }
 
@@ -497,13 +497,13 @@ section h2 {
   text-align: center;
   font-size: 15px;
   visibility: hidden;
-  color:lightgoldenrodyellow;
+  color:rgb(32, 19, 2);
   display: block;
 }
 
 .types .veggy_types:hover {
   border-radius: 20px;
-  background-color: #41dd41;
+  background-color: rgb(235, 125, 85);
 }
 
 .types .veggy_types:hover #veg_names {
